@@ -1,23 +1,17 @@
 package gohigher.common;
 
-import static gohigher.application.ProcessFixture.INTERVIEW;
-import static gohigher.application.ProcessFixture.TEST;
+import static gohigher.application.ApplicationErrorCode.*;
 import static gohigher.application.ProcessFixture.*;
-import static gohigher.common.ProcessType.DOCUMENT;
-import static gohigher.common.ProcessType.TO_APPLY;
 import static org.assertj.core.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.EnumSource;
 
 import gohigher.application.ApplicationErrorCode;
 import gohigher.application.ProcessFixture;
@@ -85,74 +79,17 @@ class ProcessesTest {
 			}
 		}
 
-		@DisplayName("1개의 지원 예정 혹은 서류 전형이 포함된 Process 리스트를 받을 경우")
+		@DisplayName("비어있는 전형 목록을 받을 경우")
 		@Nested
-		class Context_with_processes_that_includes_one_toApply_or_document_process {
+		class Context_with_empty_processes {
 
-			private final Process test1 = TEST.toDomainWithoutOrder();
-			private final Process test2 = CODING_TEST.toDomainWithoutOrder();
-			private final Process interview1 = FIRST_INTERVIEW.toDomainWithoutOrder();
-			private final Process interview2 = SECOND_INTERVIEW.toDomainWithoutOrder();
-			private final List<Process> input = new ArrayList<>(List.of(test1, test2, interview1, interview2));
+			private final List<Process> processes = Collections.emptyList();
 
-			@DisplayName("동일한 일자의 지원 예정, 서류 전형을 추가한 Processes객체를 반환한다.")
-			@ParameterizedTest
-			@EnumSource(value = ProcessType.class, names = {"TO_APPLY", "DOCUMENT"})
-			void it_returns_processes_that_assigned_order(ProcessType processType) {
-				Process process = new Process(null, processType, "세부직무", LocalDateTime.now());
-				input.add(process);
-
-				Processes processes = Processes.initialFrom(input);
-				Map<ProcessType, List<Process>> values = processes.getValues();
-
-				assertAll(
-					() -> assertThat(values).containsKey(TO_APPLY),
-					() -> assertThat(values).containsKey(DOCUMENT)
-				);
-			}
-		}
-
-		@DisplayName("1개의 지원 예정 혹은 서류 전형을 받을 경우")
-		@Nested
-		class Context_with_Only_Process_Of_To_Apply_Or_Document {
-
-			@DisplayName("동일한 일자의 지원 예정, 서류 전형을 가진 Processes를 반환한다.")
-			@ParameterizedTest
-			@EnumSource(value = ProcessType.class, names = {"TO_APPLY", "DOCUMENT"})
-			void it_returns_processes_with_to_apply_and_document(ProcessType processType) {
-				Process process = new Process(null, processType, "세부직무", LocalDateTime.now());
-
-				Processes actual = Processes.initialFrom(process);
-
-				Map<ProcessType, List<Process>> processes = actual.getValues();
-				Process firstProcess = processes.get(TO_APPLY).get(0);
-				Process secondProcess = processes.get(DOCUMENT).get(0);
-				List<ProcessType> processesTypes = List.of(firstProcess.getType(), secondProcess.getType());
-				assertAll(
-					() -> assertThat(processes).hasSize(2),
-					() -> assertThat(firstProcess.getSchedule()).isEqualTo(secondProcess.getSchedule()),
-					() -> assertThat(processesTypes).containsExactly(TO_APPLY, DOCUMENT)
-				);
-			}
-		}
-
-		@DisplayName("지원 예정 혹은 서류가 아닌 1개의 전형을 받을 경우")
-		@Nested
-		class Context_with_Only_Process_That_Is_Not_To_Apply_Or_Document {
-
-			@DisplayName("해당 전형만 가진 Processes를 반환한다.")
-			@ParameterizedTest
-			@EnumSource(value = ProcessType.class, names = {"TEST", "INTERVIEW", "COMPLETE"})
-			void it_returns_processes_with_only_that_process(ProcessType processType) {
-				Process process = new Process(null, processType, "세부직무", LocalDateTime.now());
-
-				Processes actual = Processes.initialFrom(process);
-
-				Map<ProcessType, List<Process>> processes = actual.getValues();
-				assertAll(
-					() -> assertThat(processes.keySet()).hasSize(1),
-					() -> assertThat(processes.get(processType)).contains(process)
-				);
+			@DisplayName("예외를 발생시킨다.")
+			@Test
+			void it_throws_exception() {
+				assertThatThrownBy(() -> Processes.initialFrom(processes))
+					.hasMessage(APPLICATION_PROCESS_NOT_EXIST.getMessage());
 			}
 		}
 	}
@@ -222,7 +159,7 @@ class ProcessesTest {
 		class Context_with_target_process {
 
 			private final Process expected = TEST.toPersistedDomain(targetId);
-			Processes processes = Processes.initialFrom(List.of(expected));
+			private final Processes processes = Processes.initialFrom(List.of(expected));
 
 			@DisplayName("해당 객체를 반환한다")
 			@Test
@@ -237,7 +174,9 @@ class ProcessesTest {
 		@Nested
 		class Context_without_target_process {
 
-			private final Processes processes = Processes.initialFrom(List.of());
+			private final Long otherId = 2L;
+			private final Process testProcess = TEST.toPersistedDomain(otherId);
+			private final Processes processes = Processes.initialFrom(List.of(testProcess));
 
 			@DisplayName("예외를 발생시킨다.")
 			@Test
